# claudebot

./: CLAUDE.md  Makefile  pyproject.toml  ruff.toml
prompts/: example_comparator.py  example_test_fixer.py
src/claudebot/: __init__.py  __main__.py  claudebot.py  cli.py  default_prompt_generator.py  git_manager.py  models.py  prompt_generator.py  run_tests.py  test_runner.py  utils.py
src/claudebot/generators/: __init__.py  implementation_comparator.py  test_fixer.py
tests/: test_cli.py  test_git_manager.py  test_path.py
